--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -124,6 +124,9 @@
     <ul id="tab-nsw" class="tab__content is-active">
       <li>
         <a class="national__centre-tile national__centre-tile--bondijunction" href="#">
+          <!-- <span class="preloader preloader--light">
+            <span class="preloader__spinner"></span>
+          </span> -->
           <div class="container">
             <h3 class="h1">Tea Tree Plaza</h3>
             <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
@@ -223,25 +226,25 @@
     <div class="container">
       <ul class="horiz-list--slash">
         <li>
-          <a href="#">Westfild Group</a>
+          <a href=" " rel="external">Westfild Group</a>
         </li>
         <li>
-          <a href="#"><abbr title="Australia">AU</abbr></a>
+          <a href="<%= root_path %>"><abbr title="Australia">AU</abbr></a>
         </li>
         <li>
-          <a href="#"><abbr title="New Zealand">NZ</abbr></a>
+          <a href="http://www.westfield.co.nz/" rel="external"><abbr title="New Zealand">NZ</abbr></a>
         </li>
         <li>
-          <a href="#"><abbr title="United Kingdom">UK</abbr></a>
+          <a href="http://uk.westfield.com/" rel="external"><abbr title="United Kingdom">UK</abbr></a>
         </li>
         <li>
-          <a href="#"><abbr title="United States of America">USA</abbr></a>
+          <a href="http://www.westfield.com/"><abbr title="United States of America">USA</abbr></a>
         </li>
         <li>
-          <a href="#">Jobs</a>
+          <a href="http://corporate.westfield.com/careers/">Jobs</a>
         </li>
         <li>
-          <a href="#">Our Community</a>
+          <a href="http://corporate.westfield.com/about/sustainability/">Our Community</a>
         </li>
       </ul>
 
