Header updates - WSF-5134

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -166,7 +166,7 @@ Global stylesheet
 /* Buttons */
 @import "partials/buttons/base";
 @import "partials/buttons/main";
-@import "partials/buttons/menu-toggle";
+@import "partials/buttons/menu";
 @import "partials/buttons/close";
 @import "partials/buttons/faux-link";
 @import "partials/buttons/expand-collapse";
