--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -165,7 +165,7 @@
 /* Shirt */
 .icon--shirt:before {content: "\e037";}
 
-/* Play button */
+/* Play */
 .icon--play:before {content: "\e038";}
 
 /* Arrow up */
