--- a/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
+++ b/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
@@ -10,6 +10,7 @@
   .horiz-list--fit               - Force the items to occupy 100% of the available width of its parent.
   .horiz-list--comma             - Comma separated.
   .horiz-list--slash             - Slash separated.
+  .horiz-list--half              - Half spacing between list items.
 
   Styleguide Horizontal List
 */
@@ -93,7 +94,7 @@
 
 .horiz-list--comma > li:after {content: ",";}
 
-/* Base spacing between `li` */
+/* Half spacing between `li` */
 .horiz-list--gutter-half > li {
 	@include to-rem(padding-left, $spacing-half);
 
