--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -7,23 +7,16 @@
 
   <%# Hero image at small breakpoint %>
    @media (max-width: 25em) {
-    .national__centre-tile--bondijunction {
-      background-image: url('http://res.cloudinary.com/wlabs/image/fetch/w_400,h_107,c_fill,e_blur:300/http://beta.westfield.com.au/assets/heroes/bondijunction-lrg-4ec924a641f26e4ae8822ec42d6bb7a3.jpg');
-      }
+    .national__centre-tile--bondijunction {background-image: url('http://res.cloudinary.com/wlabs/image/fetch/w_400,h_107,c_fill,e_blur:300/http://beta.westfield.com.au/assets/heroes/bondijunction-lrg-4ec924a641f26e4ae8822ec42d6bb7a3.jpg');}
     }
 
     <%# Hero image at medium breakpoint %>
-    @media (min-width: 25.0625em) and (max-width: 48em) {    
-      .national__centre-tile--bondijunction {
-        background-image: url('http://res.cloudinary.com/wlabs/image/fetch/w_768,h_205,c_fill,e_blur:300/http://beta.westfield.com.au/assets/heroes/bondijunction-lrg-4ec924a641f26e4ae8822ec42d6bb7a3.jpg');
-      }
+      .national__centre-tile--bondijunction {background-image: url('http://res.cloudinary.com/wlabs/image/fetch/w_768,h_205,c_fill,e_blur:300/http://beta.westfield.com.au/assets/heroes/bondijunction-lrg-4ec924a641f26e4ae8822ec42d6bb7a3.jpg');}
     }
 
     <%# Hero image at large breakpoint %>
     @media (min-width: 48.0625em) {    
-      .national__centre-tile--bondijunction {
-        background-image: url('http://res.cloudinary.com/wlabs/image/fetch/w_1600,h_300,c_fill,e_blur:300/http://beta.westfield.com.au/assets/heroes/bondijunction-lrg-4ec924a641f26e4ae8822ec42d6bb7a3.jpg');
-      }
+      .national__centre-tile--bondijunction {background-image: url('http://res.cloudinary.com/wlabs/image/fetch/w_1600,h_300,c_fill,e_blur:300/http://beta.westfield.com.au/assets/heroes/bondijunction-lrg-4ec924a641f26e4ae8822ec42d6bb7a3.jpg');}
     }
 
     <%# Old IE %>
@@ -39,15 +32,15 @@
 <div class="national__inner">
 
   <%# Header %>
-  <header class="national__header gallery gallery--items-2"> 
+  <header class="national__header img-rotate img-rotate--items-2"> 
     <%# Preloader %>
       <%# <span class="preloader preloader--middle preloader--light"><span class="preloader__spinner"></span><em class="hide-visually">Loading, please wait&#8230;</em></span> %>
     <%# //Preloader %>
 
-    <%# Gallery images %>
-    <div class="national__hero__1 gallery__item gallery__item__1 is-loaded"></div>
-    <div class="national__hero__2 gallery__item gallery__item__2 is-loaded"></div>
-    <%# //Gallery images %>
+    <%# Rotating images %>
+    <div class="national__hero__1 img-rotate__item img-rotate__item__1 is-loaded"></div>
+    <div class="national__hero__2 img-rotate__item img-rotate__item__2 is-loaded"></div>
+    <%# //Rotating images %>
 
     <%# Container %>
     <div class="container container--position">
@@ -55,19 +48,19 @@
       <img src="<%= image_path "logo-white.svg" %>" alt="Westfield" data-svg-fallback="<%= image_path "logo-white.png" %>" class="national__logo">
       <%# //Logo %>
 
-      <%# Hero header %>
-      <div class="national__hero-header">
+      <%# Hero heading wrap %>
+      <div class="national__heading-wrap">
         <h1>
           <span>3,300 stores. 60,000 products</span>
           You want. We find.
         </h1>
 
-        <a class="national__video" href="#">
+        <a class="national__video" href="#" rel="external" target="_blank">
           <img src="<%= image_path "video-thumbnail.jpg" %>" alt="Westfield Campaign video">
           <span class="icon icon--play" aria-hidden="true"></span>
         </a>
       </div>
-      <%# Hero header %>
+      <%# //Hero heading wrap %>
 
       <%# Nav %>
       <nav role="navigation">
@@ -102,7 +95,7 @@
           <a class="is-active" href="#tab-nsw"><abbr title="New South Wales">NSW</abbr></a>
         </li>
         <li>
-          <a href="#tab-act"><abbr ttle="Australian Capital Territoy">ACT</abbr></a>
+          <a href="#tab-act"><abbr title="Australian Capital Territoy">ACT</abbr></a>
         </li>
         <li>
           <a href="#tab-qld"><abbr title="Queensland">QLD</abbr></a>
@@ -226,7 +219,7 @@
     <div class="container">
       <ul class="horiz-list--slash">
         <li>
-          <a href=" " rel="external">Westfild Group</a>
+          <a href="http://corporate.westfield.com/" rel="external">Westfild Group</a>
         </li>
         <li>
           <a href="<%= root_path %>"><abbr title="Australia">AU</abbr></a>
@@ -238,19 +231,19 @@
           <a href="http://uk.westfield.com/" rel="external"><abbr title="United Kingdom">UK</abbr></a>
         </li>
         <li>
-          <a href="http://www.westfield.com/"><abbr title="United States of America">USA</abbr></a>
+          <a href="http://www.westfield.com/" rel="external"><abbr title="United States of America">USA</abbr></a>
         </li>
         <li>
-          <a href="http://corporate.westfield.com/careers/">Jobs</a>
+          <a href="http://corporate.westfield.com/careers/" rel="external">Jobs</a>
         </li>
         <li>
-          <a href="http://corporate.westfield.com/about/sustainability/">Our Community</a>
+          <a href="http://corporate.westfield.com/about/sustainability/" rel="external"a>Our Community</a>
         </li>
       </ul>
 
       <ul class="horiz-list--slash">
         <li>
-          <small>&copy; Westfield 2013</small>
+          <small>&copy; Westfield <%= Time.now.year %></small>
         </li>
         <li>
           <a href="#">Terms &amp; Conditions</a>
