--- a/app/views/layouts/national.html.erb
+++ b/app/views/layouts/national.html.erb
@@ -16,9 +16,7 @@
   <!-- //Prefetch DNS for external assets -->
 
   <!-- Title -->
-  <!-- TODO: Get page title from Kirsten -->
-  <title><%= meta.page_title %></title>
-  <!-- //Title -->
+  <title>Westfield Australia | Shopping Centres in NSW, QLD, VIC, SA & WA</title>
 
   <%= render "shared/stylesheets_global" %>
 
@@ -34,7 +32,7 @@
   <!-- //IE 10 tile icon -->
 
   <!-- [BACK END] meta description should be unique for each page for SEO purposes -->
-  <meta name="description" content="">
+  <meta name="description" content="Find the best in retail, dining, leisure and entertainment at one of our centres across Australia, shop online or buy a gift card today">
   <!-- //Meta description -->
 
 </head>
