--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -49,7 +49,7 @@
       <div class="national__heading-wrap">
         <h1>
           <%# [BACKEND] Number of stores and products need to be dynamic. The number will also need to be rounded so it's presentable. We always round down to the hundred e.g. if it's 3995 stores, we'll present "3,990". %>
-          <span>Over [Number of stores] stores. Over [Number of products] products</span>
+          <span>Over [#,###] stores. Over [##,###] products</span>
           You want. We find.
         </h1>
 
