--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -21,9 +21,9 @@
     } %>
 
     <%# Old IE %>
-    .old-ie .national__centre-tile--bondijunction {
+    <%# .old-ie .national__centre-tile--bondijunction {
       background-image: url('http://res.cloudinary.com/wlabs/image/fetch/w_1600,h_300,c_fill,e_blur:300/http://beta.westfield.com.au/assets/heroes/bondijunction-lrg-4ec924a641f26e4ae8822ec42d6bb7a3.jpg');
-    }
+    }%>
   </style>
 <% end %>
 <%# //Background images of centre tiles %>
@@ -48,26 +48,32 @@
       <%# Hero heading wrap %>
       <div class="national__heading-wrap">
         <h1>
-          <%# [BACKEND] Number of stores and products need to be dynamic. The number will also need to be rounded so it's presentable. We always round down to the hundred e.g. if it's 3995 stores, we'll present "3,990". %>
+          <%# [BACKEND] Number of stores and products need to be dynamic. The number will also need to be rounded so it's presentable. We always round down to the hundred e.g. if it's 3995 stores, we'll present "3,900". %>
           <span>Over [#,###] stores. Over [##,###] products</span>
           You want. We find.
         </h1>
 
-        <a class="national__video" href="#" rel="external" target="_blank">
+        <%# TODO: Add link to YouTube video when it's ready %>
+        <!-- <a class="national__video" href="#" rel="external" target="_blank">
           <img src="<%= image_path "video-thumbnail.jpg" %>" alt="Westfield Campaign video">
           <span class="icon icon--play" aria-hidden="true"></span>
-        </a>
+        </a> -->
+        <div class="national__video">
+          <img src="<%= image_path "video-thumbnail.jpg" %>" alt="Westfield Campaign video">
+          <span class="icon icon--play" aria-hidden="true"></span>
+        </div>
       </div>
       <%# //Hero heading wrap %>
 
       <%# Nav %>
       <nav role="navigation">
         <ul class="horiz-list horiz-list--gutter-half">
-          <li>
+          <%# TODO: Add link to National product browse page when it's ready %>
+          <%# <li>
             <a href="#">
               <span class="icon icon--shirt" aria-hidden="true"></span>Shop products
             </a>
-          </li>
+          </li> %>
           <li>
             <a href="http://www.westfieldgiftcards.com.au" rel="external">
               <span class="icon icon--gift-card" aria-hidden="true"></span>Buy Gift Cards
@@ -232,7 +238,7 @@
           <a href="http://corporate.westfield.com/careers/" rel="external">Jobs</a>
         </li>
         <li>
-          <a href="http://corporate.westfield.com/about/sustainability/" rel="external"a>Our Community</a>
+          <a href="http://corporate.westfield.com/about/sustainability/" rel="external">Our Community</a>
         </li>
       </ul>
 
