UI Polish - WSF-5379

--- a/app/assets/stylesheets/partials/abstractions/_drop-down.scss
+++ b/app/assets/stylesheets/partials/abstractions/_drop-down.scss
@@ -11,12 +11,7 @@
 */
 
 /* Container for the drop down and drop down trigger */
-.drop-down-container {
-  position: relative;
-
-  /* Show the drop down - this to be sunsetted once the 'Twitter Bootstrap Drop down' plugin has been replaced with 'Angular toggle visibility' directive */
-  &.is-active > .drop-down {display: block;}
-}
+.drop-down-container {position: relative;}
 
   /* The drop down (JS users only) */
   .js .drop-down {
