UI Polish - WSF-5379

--- a/app/assets/stylesheets/partials/abstractions/_drop-down.scss
+++ b/app/assets/stylesheets/partials/abstractions/_drop-down.scss
@@ -4,7 +4,7 @@
 
 /*
 	Usage:
-		A generic drop down powered by the 'Twitter Bootstrap Drop down' plugin.
+		A generic drop down powered by 'Angular Toggle Visibility Directive'.
 
 	Demo:
 		Style Guide -> Abstractions -> Drop Down
